--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 
 	<meta charset="utf-8">
-	<base href="/">
+	
 
 	<title>OTTIMO - Салон штор в Астане</title>
 	<meta name="description" content="">
@@ -17,7 +17,7 @@
 	<meta name="theme-color" content="#000">
 	<!-- Custom Browsers Color End -->
 
-	<link rel="stylesheet" href="../css/main.min.css">
+	<link rel="stylesheet" href="css/main.min.css">
 
 </head>
 <header class="header">
